# chatgpt-api-wrapper

./: .gitignore  README.md  pyproject.toml
src/chatgpt_api_wrapper/: config.py
src/chatgpt_api_wrapper/chatgpt/: __init__.py  response.py  session.py
src/chatgpt_api_wrapper/tools/: __init__.py  summarize.py
src/chatgpt_api_wrapper/utils/: retry.py  template.py
tests/: summarize_test.py
